Bug 1371546 - Sync with the render thread when ShutDown() was called in main thread. r=nical, jerry